--- a/index.html
+++ b/index.html
@@ -2,91 +2,95 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>ABLUKA – Strateji Oyunu</title>
+<title>ABLUKA – Turnuva Modu</title>
 <style>
-body {
-  background:#1e1e1e;
+body{
+  background:#111;
   color:#fff;
   font-family:Arial, sans-serif;
   display:flex;
   justify-content:center;
   margin-top:20px;
 }
-#game {
-  text-align:center;
-}
-#board {
+#game{text-align:center}
+#board{
   display:grid;
   grid-template-columns:repeat(7,60px);
   gap:4px;
-  margin-top:10px;
+  margin:10px auto;
 }
-.cell {
-  width:60px;
-  height:60px;
-  background:#555;
+.cell{
+  width:60px;height:60px;
+  background:#444;
   cursor:pointer;
   display:flex;
   align-items:center;
   justify-content:center;
 }
-.white {
-  background:#eee;
-  border-radius:50%;
-}
-.black {
-  background:#111;
-  border-radius:50%;
-}
-.block {
-  background:darkred;
-}
-.selected {
-  outline:3px solid yellow;
-}
+.white{background:#eee;border-radius:50%}
+.black{background:#000;border-radius:50%}
+.block{background:darkred}
+.selected{outline:3px solid yellow}
 </style>
 </head>
 
 <body>
 <div id="game">
-  <h2>ABLUKA</h2>
-  <p id="info">Beyaz sensin. Taşı oyna, sonra engel koy.</p>
+  <h2>ABLUKA – 3 Set</h2>
+  <p id="status"></p>
   <div id="board"></div>
 </div>
 
 <script>
-const SIZE = 7;
-const CENTER = 24;
+const SIZE=7;
+const TOP_START=3;
+const BOTTOM_START=45;
+let set=1, playerScore=0, aiScore=0;
+let playerColor, aiColor;
+let board, playerPos, aiPos;
+let phase="move", selected=null;
 
-let board = Array(49).fill(0);
-let playerPos = 24;
-let aiPos = 25;
-board[playerPos] = 1;
-board[aiPos] = 2;
+const status=document.getElementById("status");
+const boardDiv=document.getElementById("board");
 
-let phase = "move";
-let selected = null;
+function kura(){
+  playerColor = Math.random()<0.5 ? 1 : 2;
+  aiColor = playerColor===1?2:1;
+}
 
-const boardDiv = document.getElementById("board");
-const info = document.getElementById("info");
+function setupSet(){
+  board=Array(49).fill(0);
+  if(playerColor===1){
+    playerPos=BOTTOM_START;
+    aiPos=TOP_START;
+  }else{
+    playerPos=TOP_START;
+    aiPos=BOTTOM_START;
+  }
+  board[playerPos]=playerColor;
+  board[aiPos]=aiColor;
+  phase="move";
+  selected=null;
+  status.textContent=`Set ${set} | Sen: ${playerColor===1?"Beyaz":"Siyah"}`;
+  draw();
+}
 
-function draw() {
-  boardDiv.innerHTML = "";
+function draw(){
+  boardDiv.innerHTML="";
   board.forEach((v,i)=>{
-    let d = document.createElement("div");
+    let d=document.createElement("div");
     d.className="cell";
     if(v===1)d.classList.add("white");
     if(v===2)d.classList.add("black");
     if(v===-1)d.classList.add("block");
     if(i===selected)d.classList.add("selected");
-    d.onclick=()=>clickCell(i);
+    d.onclick=()=>click(i);
     boardDiv.appendChild(d);
   });
 }
 
 function neighbors(i){
-  let x=i%SIZE,y=Math.floor(i/SIZE);
-  let res=[];
+  let x=i%SIZE,y=Math.floor(i/SIZE),res=[];
   for(let dx=-1;dx<=1;dx++)
     for(let dy=-1;dy<=1;dy++){
       if(dx||dy){
@@ -106,34 +110,33 @@ function hasMove(pos,b){
   return moves(pos,b).length>0;
 }
 
-function evaluate(b,pPos,aPos){
-  let aiM = moves(aPos,b).length;
-  let pM = moves(pPos,b).length;
-  let aC = Math.abs(aPos-CENTER);
-  let pC = Math.abs(pPos-CENTER);
-  return aiM*3 - pM*4 - aC + pC;
+function evalBoard(b,pPos,aPos){
+  let aiM=moves(aPos,b).length;
+  let pM=moves(pPos,b).length;
+  let trapBonus = pM===0 ? 100 : 0;
+  return aiM*4 - pM*6 + trapBonus;
 }
 
 function minimax(b,pPos,aPos,depth,alpha,beta,max){
-  if(depth===0 || !hasMove(aPos,b) || !hasMove(pPos,b))
-    return evaluate(b,pPos,aPos);
+  if(depth===0 || !hasMove(pPos,b) || !hasMove(aPos,b))
+    return evalBoard(b,pPos,aPos);
 
   if(max){
     let best=-999;
     for(let m of moves(aPos,b)){
       let nb=b.slice();
-      nb[aPos]=0; nb[m]=2;
+      nb[aPos]=0; nb[m]=aiColor;
       let val=minimax(nb,pPos,m,depth-1,alpha,beta,false);
       best=Math.max(best,val);
       alpha=Math.max(alpha,best);
       if(beta<=alpha)break;
     }
     return best;
-  } else {
+  }else{
     let best=999;
     for(let m of moves(pPos,b)){
       let nb=b.slice();
-      nb[pPos]=0; nb[m]=1;
+      nb[pPos]=0; nb[m]=playerColor;
       let val=minimax(nb,m,aPos,depth-1,alpha,beta,true);
       best=Math.min(best,val);
       beta=Math.min(beta,best);
@@ -143,78 +146,90 @@ function minimax(b,pPos,aPos,depth,alpha,beta,max){
   }
 }
 
-function bestBlock(b,pPos){
-  let best=null,score=999;
+function bestBlock(b,pPos,aPos){
+  let best=null,bestScore=999;
   for(let i=0;i<b.length;i++){
     if(b[i]!==0)continue;
     let nb=b.slice();
     nb[i]=-1;
-    let m=moves(pPos,nb).length;
-    if(m<score){
-      score=m;
+    let score=moves(pPos,nb).length + moves(aPos,nb).length;
+    if(score<bestScore){
+      bestScore=score;
       best=i;
     }
   }
   return best;
 }
 
-function clickCell(i){
-  if(phase==="move"){
-    if(i===playerPos) selected=i;
-    else if(selected!==null && neighbors(playerPos).includes(i) && board[i]===0){
-      board[playerPos]=0;
-      playerPos=i;
-      board[playerPos]=1;
-      selected=null;
-      phase="block";
-      info.textContent="Şimdi engel koy";
-    }
-  } else if(phase==="block"){
+function click(i){
+  if(phase!=="move")return;
+  if(i===playerPos)selected=i;
+  else if(selected!==null && neighbors(playerPos).includes(i) && board[i]===0){
+    board[playerPos]=0;
+    playerPos=i;
+    board[playerPos]=playerColor;
+    selected=null;
+    phase="block";
+    draw();
+    setTimeout(playerBlock,100);
+  }
+}
+
+function playerBlock(){
+  phase="waitBlock";
+}
+
+boardDiv.addEventListener("click",e=>{
+  if(phase==="waitBlock"){
+    let i=[...boardDiv.children].indexOf(e.target);
     if(board[i]===0){
       board[i]=-1;
       phase="ai";
-      info.textContent="Rakip düşünüyor...";
+      draw();
       setTimeout(aiTurn,300);
     }
   }
-  draw();
-}
+});
 
 function aiTurn(){
   if(!hasMove(aiPos,board)){
-    alert("Kazandın! Siyah oynayamadı.");
-    return;
+    endSet(true);return;
   }
-
   let best=-999,move=null;
   for(let m of moves(aiPos,board)){
     let nb=board.slice();
-    nb[aiPos]=0; nb[m]=2;
-    let val=minimax(nb,playerPos,m,4,-999,999,false);
-    if(val>best){
-      best=val;
-      move=m;
-    }
+    nb[aiPos]=0; nb[m]=aiColor;
+    let val=minimax(nb,playerPos,m,5,-999,999,false);
+    if(val>best){best=val;move=m;}
   }
-
   board[aiPos]=0;
   aiPos=move;
-  board[aiPos]=2;
+  board[aiPos]=aiColor;
 
-  let block=bestBlock(board,playerPos);
-  if(block!==null) board[block]=-1;
+  let block=bestBlock(board,playerPos,aiPos);
+  if(block!==null)board[block]=-1;
 
   if(!hasMove(playerPos,board)){
-    alert("Kaybettin! Ablukaya alındın.");
-    return;
+    endSet(false);return;
   }
-
   phase="move";
-  info.textContent="Taşını oyna";
   draw();
 }
 
-draw();
+function endSet(playerWin){
+  if(playerWin)playerScore++; else aiScore++;
+  set++;
+  if(playerScore===2 || aiScore===2 || set>3){
+    alert(`MAÇ BİTTİ\nSen: ${playerScore} – AI: ${aiScore}`);
+    location.reload();
+    return;
+  }
+  [playerColor,aiColor]=[aiColor,playerColor];
+  setupSet();
+}
+
+kura();
+setupSet();
 </script>
 </body>
 </html>
